Making Visitor log look better + Fix alignment profile

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -107,7 +107,7 @@ ol.visitorLog {
 }
 
 ol.visitorLog li {
-    margin-bottom: 4px;
+    margin-bottom: 7px;
 }
 
 #visitsLive img {
