--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -422,8 +422,7 @@
 
 .visitor-profile-date {
     float:right;
-    font-size:13px;
-    line-height:26px;
+    margin-top:6px;
 }
 
 .visitor-profile-fog {
@@ -461,7 +460,6 @@ span.visitor-profile-goal-name {
     text-align:center;
 
     > a {
-        font-size:11px;
         display:inline-block;
         color:#5e5e5c;
     }
