--- a/plugins/Morpheus/stylesheets/main.less
+++ b/plugins/Morpheus/stylesheets/main.less
@@ -212,7 +212,6 @@ p {
       margin-right: 0;
       a {
         font-family: @theme-fontFamily-base;
-        font-size: 11px;
         line-height: 12px;
         display: inline-block;
         width: 100%;
@@ -541,7 +540,6 @@ div.sparkline {
                 border-top: 0 !important;
                 li {
                     background: @theme-color-background-contrast !important;
-                    .font-default(11px, 19px);
                     font-weight: normal;
                     color: @theme-color-text-lighter;
                     &:last-child {
